k3s/pgadmin/03-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin
  namespace: pgadmin
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    - secretName: cert-apcode.com.br
  rules:
    - host: pgadmin.apcode.com.br
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: pgadmin
                port:
                  name: pgadmin
